@@ -37,14 +37,12 @@ $wgAutoloadLocalClasses = array(
 	'ApiFileRevert' => __DIR__ . '/includes/api/ApiFileRevert.php',
 	'ApiFormatBase' => __DIR__ . '/includes/api/ApiFormatBase.php',
 	'ApiFormatDbg' => __DIR__ . '/includes/api/ApiFormatDbg.php',
-	'ApiFormatDump' => __DIR__ . '/includes/api/ApiFormatDump.php',
 	'ApiFormatFeedWrapper' => __DIR__ . '/includes/api/ApiFormatFeedWrapper.php',
 	'ApiFormatJson' => __DIR__ . '/includes/api/ApiFormatJson.php',
 	'ApiFormatNone' => __DIR__ . '/includes/api/ApiFormatNone.php',
 	'ApiFormatPhp' => __DIR__ . '/includes/api/ApiFormatPhp.php',
 	'ApiFormatRaw' => __DIR__ . '/includes/api/ApiFormatRaw.php',
 	'ApiFormatTxt' => __DIR__ . '/includes/api/ApiFormatTxt.php',
-	'ApiFormatWddx' => __DIR__ . '/includes/api/ApiFormatWddx.php',
 	'ApiFormatXml' => __DIR__ . '/includes/api/ApiFormatXml.php',
 	'ApiFormatXmlRsd' => __DIR__ . '/includes/api/ApiRsd.php',
 	'ApiFormatYaml' => __DIR__ . '/includes/api/ApiFormatYaml.php',
