@@ -1117,8 +1117,6 @@
 	"apihelp-format-example-generic": "Format the query result in the $1 format.",
 	"apihelp-dbg-description": "Output data in PHP's <code>var_export()</code> format.",
 	"apihelp-dbgfm-description": "Output data in PHP's <code>var_export()</code> format (pretty-print in HTML).",
-	"apihelp-dump-description": "Output data in PHP's <code>var_dump()</code> format.",
-	"apihelp-dumpfm-description": "Output data in PHP's <code>var_dump()</code> format (pretty-print in HTML).",
 	"apihelp-json-description": "Output data in JSON format.",
 	"apihelp-json-param-callback": "If specified, wraps the output into a given function call. For safety, all user-specific data will be restricted.",
 	"apihelp-json-param-utf8": "If specified, encodes most (but not all) non-ASCII characters as UTF-8 instead of replacing them with hexadecimal escape sequences. Default when <var>formatversion</var> is not <kbd>1</kbd>.",
@@ -1132,8 +1130,6 @@
 	"apihelp-rawfm-description": "Output data with the debugging elements in JSON format (pretty-print in HTML).",
 	"apihelp-txt-description": "Output data in PHP's <code>print_r()</code> format.",
 	"apihelp-txtfm-description": "Output data in PHP's <code>print_r()</code> format (pretty-print in HTML).",
-	"apihelp-wddx-description": "Output data in WDDX format.",
-	"apihelp-wddxfm-description": "Output data in WDDX format (pretty-print in HTML).",
 	"apihelp-xml-description": "Output data in XML format.",
 	"apihelp-xml-param-xslt": "If specified, adds the named page as an XSL stylesheet. The value must be a title in the {{ns:mediawiki}} namespace ending in <code>.xsl</code>.",
 	"apihelp-xml-param-includexmlnamespace": "If specified, adds an XML namespace.",
